--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "backpack/settings": "^2.0",
         "davejamesmiller/laravel-breadcrumbs": "^5.0",
         "fideloper/proxy": "~4.0",
+        "knox/pesapal": "^1.3",
         "laravel/framework": "5.6.*",
         "laravel/scout": "^4.0",
         "laravel/tinker": "~1.0",
